# Entity-Matching

./: .gitignore  README.md  config.ini  prompts_library.yaml  pyproject.toml
90_App/: modules_database.py  tets_general.py
data_in/: .gitkeep  setup.md
scripts/: main.py  modules_core.py  modules_database.py  modules_tools.py  tests_control.py  tests_general.py  tets_general.py
