[tool.poetry]
name = "entity matching"
version = "0.1.0"
description = ""
authors = ["Leonardo Brizi <brizileo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
duckdb = "^1.2.2"
ollama = "^0.4.8"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
